--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewIngredientsPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewIngredientsPage.xaml
@@ -12,6 +12,7 @@
                 Text="Название ингридиента"
                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
             <TextBox
+                ToolTip="Название ингридиента"
                 Padding="10 10"
                 MinHeight="45"
                 MaxHeight="80"
@@ -26,6 +27,7 @@
         </StackPanel>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 10 0 0">
             <Button
+                ToolTip="Вернуться назад"
                 Width="246"
                 Height="50"
                 Margin="0 0 3.5 0"
@@ -46,6 +48,7 @@
                 </StackPanel>
             </Button>
             <Button
+                ToolTip="Добавить"
                 x:Name="NewIngridientButton"
                 Click="NewIngridientButton_Click"
                 Width="220"
