--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/ViewMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/ViewMenuPage.xaml
@@ -27,6 +27,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Image
+                        ToolTip="Фото"
                         Grid.Column="0"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
@@ -42,13 +43,17 @@
                         Orientation="Vertical" 
                         Margin="10 0 0 0">
                         <TextBlock 
+                            ToolTip="Название"
                             HorizontalAlignment="Left" 
                             Text="{Binding Name_Menu}"
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             TextAlignment="Left"
                             Margin="0 0 0 10"/>
-                        <StackPanel Orientation="Horizontal" Margin="0 10 0 5">
+                        <StackPanel
+                            ToolTip="Категория"
+                            Orientation="Horizontal" 
+                            Margin="0 10 0 5">
                             <TextBlock 
                                 Text="Категория:"
                                 Style="{DynamicResource MainStyleTextBlock}"
@@ -60,7 +65,10 @@
                                 TextAlignment="Left"
                                 Margin="3.5 0 0 0"/>
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="0 5 0 5">
+                        <StackPanel 
+                            ToolTip="Цена"
+                            Orientation="Horizontal"
+                            Margin="0 5 0 5">
                             <TextBlock 
                                 Text="Цена:"
                                 Style="{DynamicResource MainStyleTextBlock}"
@@ -76,7 +84,10 @@
                                 Text="₽"
                                 Style="{DynamicResource OtherStyleTextBlock}"/>
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="0 5 0 5">
+                        <StackPanel 
+                            ToolTip="Вес"
+                            Orientation="Horizontal"
+                            Margin="0 5 0 5">
                             <TextBlock 
                                 Text="Вес:"
                                 Style="{DynamicResource MainStyleTextBlock}"
@@ -93,7 +104,10 @@
                                 TextAlignment="Left"
                                 Margin="3.5 0 0 0"/>
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
+                        <StackPanel 
+                            ToolTip="Описание"
+                            Orientation="Horizontal"
+                            Margin="0 5 0 0">
                             <TextBlock 
                                 VerticalAlignment="Top"
                                 Text="Описание:"
