--- a/DesctopHITE/PerformanceFolder/PageFolder/UserPageFolder/MainPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/UserPageFolder/MainPage.xaml
@@ -19,6 +19,7 @@
             HorizontalAlignment="Center" 
             Orientation="Vertical">
             <TextBlock
+                ToolTip="HIRE"
                 Text="HIRE"
                 FontSize="200"
                 Style="{StaticResource MainStyleTextBlock}"
@@ -31,6 +32,7 @@
                 </TextBlock.Foreground>
             </TextBlock>
             <TextBlock
+                ToolTip="Вкусно / Быстро \ По дороге"
                 Text="Вкусно / Быстро \ По дороге"
                 FontSize="30"
                 Style="{StaticResource MainStyleTextBlock}"
@@ -60,6 +62,7 @@
                 </Border>
             </TextBlock>
             <TextBlock
+                ToolTip="{Binding ElementName=NowTimeTextBlock, Path=Text}"
                 Width="350"
                 HorizontalAlignment="Center"
                 TextAlignment="Center"
@@ -70,6 +73,7 @@
                 FontFamily="\ContentFolder\FontFolder\#DM Mono Medium"
                 Margin="0 0 0 2.5"/>
             <TextBlock
+                ToolTip="{Binding ElementName=DayOfTheWeekTextBlock, Path=Text}"
                 Text="Loading..."
                 Margin="0 2.5 0 0"
                 HorizontalAlignment="Center"
@@ -78,6 +82,7 @@
                 Style="{DynamicResource MainStyleTextBlock}"
                 FontSize="20"/>
             <TextBlock
+                ToolTip="{Binding ElementName=NowDateTextBlock, Path=Text}"
                 Text="Loading..."
                 Margin="0 2.5 0 2.5"
                 HorizontalAlignment="Center"
@@ -86,6 +91,7 @@
                 Style="{DynamicResource MainStyleTextBlock}"
                 FontSize="20"/>
             <TextBlock
+                ToolTip="{Binding ElementName=BirthdayTextBlock, Path=Text}"
                 Margin="0 2.5 0 2.5"
                 HorizontalAlignment="Center"
                 TextAlignment="Center"
@@ -93,6 +99,7 @@
                 Style="{DynamicResource MainStyleTextBlock}"
                 FontSize="25"/>
             <TextBlock
+                ToolTip="{Binding ElementName=NowHolidayTextBlock, Path=Text}"
                 Text="Loading..."
                 Margin="0 2.5 0 0"
                 HorizontalAlignment="Center"
